# mod_ros

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cliffmap_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
cliffmap_ros/include/cliffmap_ros/: cliffmap.hpp
cliffmap_ros/msg/: CLiFFMapDistributionMsg.msg
cliffmap_ros/src/: cliffmap.cpp  cliffmap_conversions.cpp  cliffmap_server.cpp
cliffmap_rviz_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
cliffmap_rviz_plugin/cliffmaps/: scenario1_matched_only.xml  scenario2_matched_only.xml  scene1.xml  scene2.xml
cliffmap_rviz_plugin/launch/: test.rviz  test_server.launch  test_server_scenario1.launch  test_server_scenario2.launch
cliffmap_rviz_plugin/src/: cliffmap_display.cpp  cliffmap_display.h  cliffmap_visual.cpp  cliffmap_visual.h
gmmtmap_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
gmmtmap_ros/include/gmmtmap_ros/: gmmtmap.hpp
gmmtmap_ros/launch/: gmmtmap_server.launch
gmmtmap_ros/msg/: GMMTMapClusterMsg.msg  GMMTMapMsg.msg
gmmtmap_ros/scripts/: gmmtmap.py
gmmtmap_ros/src/: gmmtmap.cpp  gmmtmap_server.cpp  rtree_test.cpp
gmmtmap_ros/srv/: GetGMMTMap.srv
gmmtmap_rviz_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
gmmtmap_rviz_plugin/src/: cliffmap_display.h  cliffmap_visual.h  gmmtmap_display.cpp  gmmtmap_display.h  gmmtmap_visual.cpp
include/cliffmap_ros/: cliffmap.hpp
msg/: CLiFFMapLocation.msg  CLiFFMapLocationMsg.msg  CLiFFMapMsg.msg
pedsim_scenarios/: CHANGELOG.rst  CMakeLists.txt  package.xml
pedsim_scenarios/launch/: office.launch  warehouse.launch
pedsim_scenarios/scenes/: warehouse.xml
src/: cliffmap.cpp  cliffmap_conversions.cpp  cliffmap_server.cpp  test_xml.cpp
srv/: GetCLiFFMap.srv
stefmap_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
stefmap_ros/data/: atc_2012_10_24_histograms.txt  atc_2012_10_28_histograms.txt  atc_2012_10_31_histograms.txt  atc_2012_11_04_histograms.txt  atc_2012_11_07_histograms.txt  atc_2012_11_11_histograms.txt  orkla_2019_06_13_histogram.txt  orkla_2019_06_14_histogram.txt  orkla_2019_10_14_all.txt  orkla_2019_10_14_all_histogram.txt  orkla_2019_10_15_scene1_histogram.txt  orkla_2019_10_15_scene2_histogram.txt
stefmap_ros/include/stefmap_ros/: stefmap.hpp
stefmap_ros/launch/: orkla_stefmap.launch  orkla_stefmap_shortdata.launch
stefmap_ros/maps/: orkla-MS3.pgm  orkla-MS3.yaml  orkla_map_lasertop.pgm  orkla_map_lasertop.yaml
stefmap_ros/msg/: STeFMapMsg.msg
stefmap_ros/scripts/: 1_orkla_create_histrograms_short_data.py  2_orkla_load_histograms.py  2_orkla_load_histograms_short_data.py  3_atc_create_histograms.py  3_atc_load_histograms.py  atc_create_histograms.py  atc_load_histograms.py  generate_trajectories_from_stefmap.py
stefmap_ros/scripts/tools/: create_flowmap_histograms.py  create_stefmap_input_histograms.py  load_histograms.py
stefmap_ros/src/: cell_tools.py  stefmap.cpp  stefmap_client.py  stefmap_client_orkla_shortdata.py  stefmap_node_dummy.py  stefmap_node_offline.py  stefmap_server.py  test_stefmap.cpp
stefmap_ros/src/scripts/: stefmap_client_example.py
stefmap_ros/srv/: GetSTeFMap.srv
stefmap_rviz_plugin/: CHANGELOG.rst  package.xml
stefmap_rviz_plugin/src/: stefmap_visual.cpp
whytemap_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
whytemap_ros/include/whytemap_ros/: whytemap.hpp
whytemap_ros/msg/: WHyTeMapClusterMsg.msg  WHyTeMapMsg.msg
whytemap_ros/src/: whytemap.cpp  whytemap_server.cpp
whytemap_ros/srv/: GetWHyTeMap.srv
